agregado de etiqueta main

--- a/html/contactanos.html
+++ b/html/contactanos.html
@@ -51,7 +51,7 @@
     </div>
   </nav>
 
-
+<main>
   <form>
     <h2 class="tituloContactanos">formulario de contacto</h2>
     
@@ -77,7 +77,9 @@
           </div>
       </form>
   </div>
-  <hr>
+</main>
+
+
     <footer class="colorFooter">
         <p class="footer1">Todos los derechos reservados</p>
         <div>
