--- a/html/paises.html
+++ b/html/paises.html
@@ -49,6 +49,7 @@
   </div>
 </nav>
 
+<main>
 <div class="listadoPaises">
 
   <h1 class="tituloPaises">Tu próximo destino</h1>
@@ -63,7 +64,6 @@
     <li>15 meses con posibilidad de extensión</li>
     <li>Se aplíca online en cualquier momento del año</li>
 </ol>
-  <p></p>
 </div>
 
 <div class="paisDos">
@@ -75,7 +75,6 @@
     <li>Un año calendario con posibilidad de extensión</li>
     <li>Se puede aplicar en el país o en sus embajadas</li>
 </ol>
-  <p></p>
 </div>
 
 <div class="paisTres">
@@ -87,7 +86,6 @@
     <li>Un año calendario con posibilidad de dos años de extensión</li>
     <li>Se aplica online, obligatorio estar fuera de Australia</li>
 </ol>
-  <p></p>
 </div>
 
 <div class="paisCuatro">
@@ -99,7 +97,6 @@
     <li>Un año con posibilidad de extensión</li>
     <li>Se aplíca una vez al año, en septiembre</li>
 </ol>
-  <p></p>
 </div>
 
 <div class="paisCinco">
@@ -108,10 +105,9 @@
   <img src="../img/bandera-suecia.jpeg" alt="" class="banderaSuecia">
   <ol>
     <li>Hasta 35 años</li>
-    <li>Hasta 24 meses</li>
+    <li>24 meses de duración máxima con extensión al finalizar el primer año</li>
     <li>Se aplica online todo el año</li>
 </ol>
-  <p></p>
 </div>
 
 <div class="paisSeis">
@@ -123,10 +119,11 @@
     <li>1 año con posibilidad de extensión</li>
     <li>Se aplica online todo el año</li>
 </ol>
-  <p></p>
 </div>
 
-</div>
+
+
+
 
 
     <footer class="colorFooter">
