--- a/html/testimonios.html
+++ b/html/testimonios.html
@@ -57,6 +57,8 @@
   </ol>
 </nav>
 
+
+<main>
 <div class="tituloTestimonios">
   <h1>Testimonios</h1>
 </div>
@@ -101,7 +103,7 @@
   </div>
 </div>
 
-<div>
+</main>
 
 </div>
 
