--- a/html/gestiones.html
+++ b/html/gestiones.html
@@ -49,6 +49,8 @@
   </div>
 </nav>
 
+<main>
+
 <h1 class="tituloGestion">Gestioná tu WH con nosotros</h1>
     <form id="venta-form">
         <label for="nombre">País de destino</label>
@@ -62,8 +64,8 @@
         
         <button type="submit">Consulta elegibilidad</button>
     </form>
+  </main>
 
-    <br>
 
     <footer class="colorFooter">
         <p class="footer1">Todos los derechos reservados</p>
